plugins {
	id 'org.springframework.boot' version '2.5.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

ext {
	reactorVersion = '3.3.18.RELEASE'
}

group = 'com.socurites'
version = '0.0.1'
sourceCompatibility = '1.9'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'

	// reactor
	implementation "io.projectreactor:reactor-core:$reactorVersion"

	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "io.projectreactor:reactor-test:$reactorVersion"
}

test {
	useJUnitPlatform()
}
